Fix Facebook like button vertical alignment in footer
Adjusts the Facebook button position by 5px to properly align with copyright text and email link in the footer layout.

--- a/src/scss/_custom-styles.scss
+++ b/src/scss/_custom-styles.scss
@@ -113,6 +113,8 @@
 
 .fb-like {
   padding-right: 10px;
+  // Fix vertical alignment with other footer elements
+  transform: translateY(5px);
 }
 
 .navbar .form-control {
